bugfix jquery not working, make dots more visible

--- a/src/AppBundle/Resources/public/default.css
+++ b/src/AppBundle/Resources/public/default.css
@@ -29,7 +29,7 @@ main {
 
 #loggedin-info {
     color: #aaa;
-    margin-top: -93px;
+    /*margin-top: -93px;*/
 }
 
 /* Custom page footer */
@@ -118,6 +118,7 @@ p .highlight {
 
 .journeymonitor-testresult-dot {
     width: 3.57142857%;
+    min-width: 20px;
     height: 20px;
     padding: 0;
     margin: 0;
